// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@getItems gets items 1`] = `
Array [
  Object {
    "id": "1",
  },
  Object {
    "id": "2",
  },
]
`;

exports[`@getItems gets items when envelope enabled 1`] = `
Object {
  "headers": Object {
    "x-powered-by": "Express",
  },
  "response": Object {
    "data": Array [
      Object {
        "id": "1",
      },
      Object {
        "id": "2",
      },
    ],
    "pagination": Object {
      "has_after": false,
      "has_before": false,
      "total_count": 1,
    },
  },
  "status": 200,
}
`;

exports[`@getItems gets items when envelope enabled and pretty response is disabled 1`] = `
Object {
  "headers": Object {
    "x-powered-by": "Express",
  },
  "response": Object {
    "data": Array [
      Object {
        "id": "1",
      },
      Object {
        "id": "2",
      },
    ],
    "pagination": Object {
      "has_after": false,
      "has_before": false,
      "total_count": 1,
    },
  },
  "status": 200,
}
`;

exports[`@getItems throws JsonError when sort is invalid 1`] = `
Object {
  "data": "invalid_sort",
  "path": Array [
    "filter",
  ],
  "transactionId": "1",
}
`;

exports[`@getItems throws JsonError when sort is invalid 2`] = `
Object {
  "data": "invalid_sort",
  "path": Array [
    "sort",
  ],
  "transactionId": "1",
}
`;

exports[`@getItems throws NumberError when limit is invalid 1`] = `
Object {
  "data": "not_numeric",
  "path": Array [
    "limit",
  ],
  "transactionId": "1",
}
`;
